Fix Locations Tab on Mobile

--- a/style.css
+++ b/style.css
@@ -180,9 +180,14 @@ aside {
 td {
     width: 50%;
 }
+td .add .order {
+    padding: 8px 12px;
+    font-size: 2.5vw;
+    font-weight: bolder;
+}
 td .add .location {
     text-indent: 14px;
-    font-size: 3.5vw;
+    font-size: 3.25vw;
 }
 td .add .address {
     margin-left: 14px;
